# starnion

./: .env.example  .gitignore  .goreleaser.yml  .mcp.json  CLAUDE.md  Makefile  README.md  docker-compose.yml  go.work  go.work.sum
agent/: .env.example  AGENTS.md  README.md  SOUL.md  package.json  pnpm-lock.yaml  pyproject.toml  test_chat.mjs  tsconfig.json  바이브코딩_강의자료.md
agent/skills/: requirements.txt
agent/skills/_shared/: SKILL_CONVENTIONS.md  starnion_utils.py
agent/skills/analysis/: SKILL.md
agent/skills/audio/: SKILL.md
agent/skills/browser/: SKILL.md
agent/skills/budget/: SKILL.md
agent/skills/currency/: SKILL.md
agent/skills/dday/: SKILL.md
agent/skills/diary/: SKILL.md
agent/skills/documents/: SKILL.md
agent/skills/files/: SKILL.md
agent/skills/finance/: SKILL.md  transactions.json
agent/skills/github/: SKILL.md
agent/skills/goals/: SKILL.md
agent/skills/google-workspace/: SKILL.md
agent/skills/image/: SKILL.md
agent/skills/memo/: SKILL.md
agent/skills/memory/: SKILL.md
agent/skills/naver-map/: SKILL.md
agent/skills/naver-search/: SKILL.md
agent/skills/notion/: SKILL.md
agent/skills/planner-diary/: SKILL.md
agent/skills/planner-goals/: SKILL.md
agent/skills/planner-inbox/: SKILL.md
agent/skills/planner-mission/: SKILL.md
agent/skills/planner-reflection/: SKILL.md
agent/skills/planner-roles/: SKILL.md
agent/skills/planner-tasks/: SKILL.md
agent/skills/planner-weekly/: SKILL.md
agent/skills/weather/: SKILL.md
agent/skills/websearch/: SKILL.md
agent/src/browser/: chrome-mcp.snapshot.ts  chrome-mcp.ts  config.ts  errors.ts  index.ts  server.ts  snapshot-roles.ts  types.ts
agent/src/jiki_agent/: __init__.py  __main__.py  config.py  context.py  log_buffer.py  persona.py
agent/src/scheduler/: analysis.ts  test-analysis.ts
agent/src/server/: grpc.ts  index.ts  logForwarder.ts
agent/src/session/: agent-factory.ts  chat.ts  llm-fallback.ts  middleware.ts  prompt-composer.ts  skill-meta.ts
agent/src/starnion_agent/: __init__.py  __main__.py  config.py  context.py  log_buffer.py  persona.py  pricing.py
agent/src/starpion_agent/: __init__.py  __main__.py  config.py  log_buffer.py  persona.py
agent/src/system/: config.ts  models.ts  prompt.ts
agent/src/tools/: checkpoint.ts  cron-tools.ts  delegate-tools.ts  exec.ts  process-registry.ts  session-tools.ts  skill-tools.ts
agent/tests/: __init__.py  conftest.py
agent/tests/unit/: __init__.py  test_calculator_tools.py  test_color_tools.py  test_currency_tools.py  test_dday_tools.py  test_encode_tools.py  test_file_context.py  test_finance_repo.py  test_finance_tools.py  test_generator.py  test_hash_tools.py  test_horoscope_tools.py  test_image_tools.py  test_ip_tools.py  test_loader.py  test_memo_tools.py  test_parser.py  (+13 more)
(+1619 files in other folders)
